# RSRL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Color.h  Defs.h  Math.h  Renderer.h  Texture.h  Viewer.h
source/: Color.cpp  Math.cpp  Renderer.cpp  Texture.cpp  Viewer.cpp
tests/: ColorTest.cpp  DrawLineTest.cpp  DrawTriangleTest.cpp  MatrixTest.cpp  TextureTest.cpp  VectorTest.cpp  ViewerTest.cpp
